# rules_objc

./: .gitignore  BUILD.bazel  LICENSE  README.md  objc.bzl  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: bcr-publish.yaml  ci.yml  release.yaml
tests/: BUILD.bazel  add.m  main.m  math_utils.h  sub.m  test_math.m
