load("//:objc.bzl", "objc_binary", "objc_library", "objc_test")

objc_library(
    name = "math_utils",
    srcs = ["add.m", "sub.m"],
    hdrs = ["math_utils.h"]
)

objc_binary(
    name = "hello",
    srcs = ["main.m"],
    deps = [":math_utils"]
)

objc_test(
    name = "math_test",
    srcs = ["test_math.m"],
    deps = [":math_utils"]
)
